--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -55,11 +55,13 @@
 <div class="numbers">
   <div class="inline-cms">
   <p><%= form.label 'top' %> <%= form.number_field :topos %></p>
-  <p><%= form.label 'top mobile' %> <%= form.number_field :toposmobile %></p>
+  <p><%= form.label 'left' %> <%= form.number_field :leftpos %></p>
+
   </div>
   <div class="inline-cms" id="left-mob">
-  <p><%= form.label 'left' %> <%= form.number_field :leftpos %></p>
-  <p><%= form.label 'left mobile' %> <%= form.number_field :leftposmobile %></p></div>
+    <p><%= form.label 'top mobile' %> <%= form.number_field :toposmobile %></p>
+  <p><%= form.label 'left mobile' %> <%= form.number_field :leftposmobile %></p>
+</div>
 
 </div>
 <div class="submit-cms">
