--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -4,7 +4,7 @@
 
 <div class="project-texts">
   <p class="show-project-title" id="project-title"><%= @project.title%></p>
-  <p><%= @project.subcategory %></p>
+  <p id="show-project-sub"><%= @project.subcategory %></p>
   <p class="show-project-body"><%= @project.body.html_safe%></p>
 </div>
 
