--- a/app/assets/stylesheets/mobile.scss
+++ b/app/assets/stylesheets/mobile.scss
@@ -113,7 +113,7 @@ ul {
 
 
   .heterodox-mobile-active{opacity: 1;}
-  .subcat-mobile{margin-left: 10px; font-family: 'Kern-i' , sans-serif; font-size: .8em; color: $main-color; align-items: baseline; text-transform: capitalize;}
+  .subcat-mobile{margin-left: 10px; font-family: 'Kern-r' , sans-serif; font-size: .8em; color: $main-color; align-items: baseline; text-transform: capitalize;}
 
 .arrow-click{
   width: 70px;
