--- a/app/views/static_pages/construction.html+phone.erb
+++ b/app/views/static_pages/construction.html+phone.erb
@@ -2,6 +2,9 @@
 <title>Labaki | Under Construction </title>
 <%= stylesheet_link_tag 'construction', media: 'all', 'data-turbolinks-track': 'reload' %>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="description" content="<%= t('desc') %> ">
+
+<%= favicon_link_tag asset_path('micro.png') %>
 
 
 </head>
