--- a/app/views/static_pages/construction.html.erb
+++ b/app/views/static_pages/construction.html.erb
@@ -1,5 +1,5 @@
 <head>
-<title>Labaki | Under Construction </title>
+<title>labaki - under construction </title>
 <%= stylesheet_link_tag 'construction', media: 'all', 'data-turbolinks-track': 'reload' %>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="<%= t('desc') %> ">
