--- a/app/assets/stylesheets/variables.css.scss
+++ b/app/assets/stylesheets/variables.css.scss
@@ -14,14 +14,14 @@
 
   }
 
-  $main-color: #37393e;
-  $body-color:  #cbc9c8;
+  $main-color: #D9C49C;
+  $body-color: #f4f2f1;
 
 
   $sec-color: #535353;
-  $new-project: #751f24;
+  $new-project: #002556;
   $details: #a9a9a9;
-  $logo-color: #751F24;
+  $logo-color: grey;
 
   $highlight: #84121D;
   $header-black: #2d2b2b;
