--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -61,9 +61,9 @@ p{font-family: 'Kern-r', sans-serif; color: $sec-color; line-height: 135%;  text
   align-items: center;
 //  width: 50%;
   justify-self: end;
-  color: $main-color;
-  a{text-decoration: none; color: $main-color;
-    &:hover{border-bottom: 1px solid $main-color;padding-bottom: 5px;}
+  color: $logo-color;
+  a{text-decoration: none; color: $logo-color;
+    &:hover{color: $main-color;}
   }
 
 }
