--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="<%= t('desc') %> ">
-
+<meta name="google-site-verification" content="sfJVr9_wDUdPqzcV-hAbyYTw88Z25myBRlIZSY6-wsc" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
 
