Colors and link

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -119,7 +119,7 @@ opacity: 0.4;
 .info-container{
   margin-top: 70px;  font-size: 17px;
   .header-a{font-family: 'Kern-b' ; color: $header-black; font-size: 20px; margin-bottom: 0px;}
-  p{ margin: 10px 0px;   a{ color: $new-project}
+  p{ margin: 10px 0px;   a{ color: $main-color}
 }
 }
 
