--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -17,7 +17,7 @@
 <div class="heterodox">
   <%= inline_svg "heterodox.svg" , id: 'heterodox-logo' %>
   <p id="heterodox-text"><%= t ".heterodox" %></p>
-  <p><%=link_to t('.heterodox-link') , 'http://www.heterodox.design' , target: "_blank" %></p>
+  <p><%=link_to t('.heterodox-link') , t('website-h') , target: "_blank" %></p>
 </div>
 
 
