--- a/app/assets/stylesheets/mobile.scss
+++ b/app/assets/stylesheets/mobile.scss
@@ -87,7 +87,7 @@ ul {
 ///////////////////////////////// Index ////
 .single-project-mobile{
   display: inline-grid;align-items: baseline;
-  //border-bottom: 1px dotted $main-color; 
+  //border-bottom: 1px dotted $main-color;
   width: 95%;
   grid-template-columns: auto 1fr auto;
 }
@@ -129,7 +129,7 @@ ul {
 .info-container-mobile{ width: 80%;
   margin-top: 20px;  font-size: 15px;
   .header-a{color: black; font-size: 18px; margin-bottom: 0px;}
-  p{ margin: 10px 0px;   a{ color: $new-project}
+  p{ margin: 10px 0px;   a{ color: $main-color}
 }
 .contact{margin-top: 30px;}
 
