--- a/app/views/projects/index.html+phone.erb
+++ b/app/views/projects/index.html+phone.erb
@@ -12,7 +12,7 @@
 <div class="heterodox-mobile">
   <%= inline_svg "heterodox.svg" , id: 'heterodox-logo' %>
   <p id="heterodox-text"><%= t ".heterodox" %></p>
-  <p><%=link_to t('.heterodox-link') , 'http://www.heterodox.design' , target: "_blank" %></p>
+  <p><%=link_to t('.heterodox-link') , t('website-h') , target: "_blank" %></p>
 </div>
 
 <script type="text/javascript" data-turbolinks-eval=false>
