--- a/app/assets/stylesheets/variables.css.scss
+++ b/app/assets/stylesheets/variables.css.scss
@@ -2,7 +2,8 @@
   @font-face  {
     font-family: 'Soyuz-Custom';
     src: url('soyuzgrotesk-custom-webfont.woff2') format('woff2'),
-        url('soyuzgrotesk-custom-webfont.woff') format('woff');
+        url('soyuzgrotesk-custom-webfont.woff') format('woff'),
+        url('SoyuzGrotesk-Custom.ttf') format('ttf');
    font-weight: normal;
    font-style: normal;
   }
