--- a/app/assets/stylesheets/variables.css.scss
+++ b/app/assets/stylesheets/variables.css.scss
@@ -1,14 +1,20 @@
 
   @font-face  {
     font-family: 'Soyuz-Custom';
-    src: url('soyuzgrotesk-custom-webfont.woff2') format('woff2'),
-        url('soyuzgrotesk-custom-webfont.woff') format('woff'),
-        url('SoyuzGrotesk-Custom.ttf') format('ttf');
-   font-weight: normal;
-   font-style: normal;
+    src:font-url('soyuzgrotesk-custom-webfont.woff');
+    font-weight: normal;
+    font-style: normal;
   }
 
 
+  @font-face {
+      font-family: 'kernitalic';
+      src: url('kern-italic-webfont.woff2') format('woff2'),
+           url('kern-italic-webfont.woff') format('woff');
+      font-weight: normal;
+      font-style: normal;
+
+  }
 
   $main-color: #D9C49C;
   $body-color: #f4f2f1;
