--- a/app/assets/stylesheets/construction.scss
+++ b/app/assets/stylesheets/construction.scss
@@ -7,7 +7,7 @@
    text-align: center;
    font-size: 11px;
    font-family: 'Kern-r' , sans-serif;
-   color: $details;
+   color: $sec-color;
 
 }
 .page-footer-mobile{
@@ -17,7 +17,7 @@
    right: 0;
    text-align: center;
    font-size: 9.5px;
-   color: $details;
+   color: $sec-color;
    margin: 0;
    padding: 10px;
    font-family: 'Kern-r' , sans-serif;
