--- a/app/views/layouts/application.html+phone.erb
+++ b/app/views/layouts/application.html+phone.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html data-theme="light">
   <head>
     <title>labaki - <%= yield(:title).downcase %> </title>
     <%= csrf_meta_tags %>
@@ -20,6 +20,7 @@
 <div class="navigation-mobile">
   <div class="all-links">
     <div class="top">
+
   <div id="hamburger">
     <div class="patty"></div>
     <div class="patty"></div>
@@ -27,6 +28,13 @@
   </div>
   <div id="close" class="invisible"><%= inline_svg 'close.svg' %></div>
   <div id="logo-mobile" class="logo-mobile"> <%= link_to projects_path do %><%= inline_svg 'labaki-logo.svg'%> <% end %></div>
+
+  <div class="toggle-container-mobile">
+  <input type="checkbox" id="switch" name="theme" /><label for="switch"><%=inline_svg 'sun.svg' , id: 'sun'%>
+  <%= inline_svg 'moon.svg' , id:'moon' %>
+  </label>
+  </div>
+
 
   </div>
   <div class="inner-navigation ">
