--- a/app/assets/stylesheets/variables.css.scss
+++ b/app/assets/stylesheets/variables.css.scss
@@ -17,17 +17,11 @@
 
   }
 
-  $main-color: #D9C49C;
-  $body-color: #f4f2f1;
 
+  $main-color: tan;
+  $body-color: whitesmoke;
+  $sec-color: dimgray;
 
-  $sec-color: #535353;
-  $new-project: #002556;
-  $details: #a9a9a9;
-  $logo-color: grey;
-
-  $highlight: #84121D;
-  $header-black: #2d2b2b;
 
   @font-face {
       font-family: 'Kern-r';
