--- a/app/assets/stylesheets/mobile.scss
+++ b/app/assets/stylesheets/mobile.scss
@@ -137,8 +137,8 @@ ul {
 .toggle-container-mobile{ cursor: pointer;
   position: absolute; top:50% ; right: 10%;
   svg{width: 20px;}
-  #sun{path{fill: $main-color}};
-  #moon{path{fill:$sec-color;}}
+  #sun{path{fill: tan}};
+  #moon{path{fill:dimgray;}}
 
 
 
