--- a/app/assets/stylesheets/mobile.scss
+++ b/app/assets/stylesheets/mobile.scss
@@ -135,7 +135,7 @@ ul {
 }
 
 .toggle-container-mobile{ cursor: pointer;
-  position: absolute; top:50% ; left: 10px;
+  position: absolute; top:55% ; right: 25px;
   svg{width: 20px;}
   #sun{path{fill: tan}};
   #moon{path{fill:dimgray;}}
